--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "socket.io": "^2.1.1"
-  },
-  "dev-dependencies": {
+    "socket.io": "^2.1.1",
     "electron": "^2.0.5"
   }
 }
